ZMCIntegral/ds-output/ds-constqx.134516.err
  File "./ds-integrands-02.py", line 211
    for n in np.linspace(.001, .785, 12)
                                       ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
